Added web pages

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -1,13 +1,16 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="UTF-8">
     <title>Main Page</title>
-    <link rel="stylesheet" href="css/site.css" />
+    <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
     <h1> Main Page </h1>
-
+    <button onclick="move_to_member()">Members</button>
+    <button>Events</button>
+    <button>Financials</button>
+    <button>Meetings</button>
     <script src="js/site.js"></script>
 
 </body>
