Basic front end webpage created

--- a/front-end/financials.html
+++ b/front-end/financials.html
@@ -3,9 +3,22 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>Financial Transactions</title>
+    <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
+    <h1>Financial Transactions</h1>
+    <button onclick="move_to_home()">Home</button>
+    <table>
+        <tr>
+            <th>Transaction Number</th>
+            <th>Date</th>
+            <th>Amount</th>
+            <th>Incoming Type</th>
+            <th>Outgoing Type</th>
+        </tr>
+    </table>
 
+    <script src="js/site.js"></script>
 </body>
 </html>
