--- a/front-end/events.html
+++ b/front-end/events.html
@@ -3,9 +3,22 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>Events</title>
+    <link rel="stylesheet" href="css/style.css" />
+
 </head>
 <body>
+    <h1>Events</h1>
+    <button onclick="move_to_home()">Home</button>
+    <table>
+        <tr id="bold_items">
+            <th>Name</th>
+            <th>Location</th>
+            <th>Date</th>
+            <th>Corresponding Fundraiser</th>
+        </tr>
+    </table>
 
+    <script src="js/site.js"></script>
 </body>
 </html>
