--- a/front-end/index.html
+++ b/front-end/index.html
@@ -6,11 +6,15 @@
     <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-    <h1> Main Page </h1>
-    <button onclick="move_to_member()">Members</button>
-    <button>Events</button>
-    <button>Financials</button>
-    <button>Meetings</button>
+    <!--<h1> Main Page </h1>-->
+    <img src="images/logo.png" id="logo_pic"/>
+    <div id="navigation_wrapper">
+        <button onclick="move_to_member()">Members</button>
+        <button onclick="move_to_events()">Events</button>
+        <button onclick="move_to_financials()">Financials</button>
+        <button onclick="move_to_meetings()">Meetings</button>
+    </div>
+    
     <script src="js/site.js"></script>
 
 </body>
