--- a/front-end/meetings.html
+++ b/front-end/meetings.html
@@ -3,9 +3,24 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>Meetings</title>
+    <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
+    <h1>Meetings</h1>
+    <button onclick="move_to_home()">Home</button>
+    <table id="meeting_all">
+        <tr>
+            <th>Date</th>
+            <th>Summary</th>
+            <th>Department</th>
+        </tr>
+    </table>
 
+    <table id="meeting_single_attendance">
+
+    </table>
+
+    <script src="js/site.js"></script>
 </body>
 </html>
