--- a/app/index.html
+++ b/app/index.html
@@ -9,10 +9,10 @@
     <!--<h1> Main Page </h1>-->
     <img src="images/logo.png" id="logo_pic"/>
     <div id="navigation_wrapper">
-        <button onclick="move_to_member()">Members</button>
-        <button onclick="move_to_events()">Events</button>
-        <button onclick="move_to_financials()">Financials</button>
-        <button onclick="move_to_meetings()">Meetings</button>
+        <button onclick="move_to_member()" id="navi_btn" class="navi_btn">Members</button>
+        <button onclick="move_to_events()" id="navi_btn" class="navi_btn">Events</button>
+        <button onclick="move_to_financials()" id="navi_btn" class="navi_btn">Financials</button>
+        <button onclick="move_to_meetings()" id="navi_btn" class="navi_btn">Meetings</button>
     </div>
     
     <script src="js/site.js"></script>
