--- a/app/meetings.html
+++ b/app/meetings.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Meetings</h1>
-    <button onclick="move_to_home()">Home</button>
+    <button onclick="move_to_home()" id="home_btn">Home</button>
     <table id="meeting_all">
         <tr>
             <th>Date</th>
