--- a/app/members.html
+++ b/app/members.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Members</h1>
-    <button onclick="move_to_home()">Home</button>
+    <button onclick="move_to_home()" id="home_btn">Home</button>
     <table>
         <tr>
             <th>First Name</th>
