--- a/app/financials.html
+++ b/app/financials.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Financial Transactions</h1>
-    <button onclick="move_to_home()">Home</button>
+    <button onclick="move_to_home()" id="home_btn">Home</button>
     <table>
         <tr>
             <th>Transaction Number</th>
