Changed to official pss logo and added references

--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <!--<h1> Main Page </h1>-->
-    <img src="images/logo.png" id="logo_pic"/>
+    <img src="images/pss-logo-white.png" id="logo_pic"/>
     <div id="navigation_wrapper">
         <button onclick="move_to_member()" id="navi_btn" class="navi_btn">Members</button>
         <button onclick="move_to_events()" id="navi_btn" class="navi_btn">Events</button>
