Created skeleton for member api and app

--- a/app/events.html
+++ b/app/events.html
@@ -35,6 +35,7 @@
     <script src="js/bootbox.min.js"></script>
 
     <script src="js/site.js"></script>
+    <script src="js/event.js"></script>
 
     <script src="event/read-events.js"></script>
     <script src="event/create-event.js"></script>
