Added html page for monthly email

--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,7 @@
         <button onclick="move_to_events()" id="navi_btn" class="navi_btn">Events</button>
         <button onclick="move_to_financials()" id="navi_btn" class="navi_btn">Financials</button>
         <button onclick="move_to_meetings()" id="navi_btn" class="navi_btn">Meetings</button>
+        <button onclick="move_to_monthlyemails()" id="navi_btn" class="navi_btn">Monthly Emails</button>
     </div>
     
     <script src="js/site.js"></script>
